# download_wrapper

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build-native.yml
include/download_wrapper/: download_wrapper.h
src/: download_wrapper.cpp
src/core/: task_manager.cpp  task_manager.h  task_record.h  task_store.cpp  task_store.h
src/http/: http_engine.cpp  http_engine.h  http_engine_impl.cpp  http_engine_internal.h
src/internal/: downloader_internal.h
src/torrent/: torrent_engine.cpp  torrent_engine.h
src/utils/: string_util.cpp  string_util.h  time_util.cpp  time_util.h
vcpkg-triplets/: arm64-android.cmake  arm64-osx.cmake  x64-osx.cmake
